examples/test/testpolicy11288.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11288
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key48: value38
      key20: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value49
          key46: value41
          key21: value23
      podSelector:
        matchLabels:
          key26: value13
          key20: value16
